Implement tests for US-intl keyboard, dead keys